feat: add header rules for css

--- a/singolo1.html
+++ b/singolo1.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Singolo</title>
     <link rel="stylesheet" href="singolo1.css">
+    <link rel="stylesheet" href="assets\fonts\stylesheet.css">
 </head>
+
 <body>
-    <header>
-        <h1>SINGOLO</h1><span>*</span>
-        <nav>
-            <ul>
-                <li>HOME</li>
-                <li>SERVICES</li>
-                <li>PORTFOLIO</li>
-                <li>ABOUT</li>
-                <li>CONTACT</li>
-            </ul>
-        </nav>
+    <header class="head">
+        <div class="head-content block">
+            <div class="head-content-logo">
+                <h1>SINGOLO</h1>
+                <span>*</span>
+            </div>
+            <nav class="head-content-menu">
+                <ul>
+                    <li class="head-content-menu-selected">HOME</li>
+                    <li>SERVICES</li>
+                    <li>PORTFOLIO</li>
+                    <li>ABOUT</li>
+                    <li>CONTACT</li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="slider">
@@ -28,27 +36,34 @@
     </main>
     <div class="services">
         <h2>Our Services</h2>
-        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi
+            erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor
+            mauris condimentum nibh.</p>
         <ul class="services-list">
             <li>
                 <h2>Custom Design</h2>
-                <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+                <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices
+                    velit.</p>
             </li>
             <li>
                 <h2>Inovative Ideas</h2>
-                <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+                <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id
+                    lorem.</p>
             </li>
             <li>
                 <h2>Love Is The Answer</h2>
-                <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+                <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque
+                    condimentum.</p>
             </li>
             <li>
                 <h2>Responsive Layout</h2>
-                <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>
+                <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.
+                </p>
             </li>
             <li>
                 <h2>24 / 7 Support</h2>
-                <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .</p>
+                <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas
+                    venenatis lorem .</p>
             </li>
             <li>
                 <h2>Feel Like A Star</h2>
@@ -57,4 +72,5 @@
         </ul>
     </div>
 </body>
+
 </html>
