feat: add style rules for slider

--- a/singolo1.html
+++ b/singolo1.html
@@ -27,11 +27,26 @@
             </nav>
         </div>
     </header>
-    <main>
-        <div class="slider">
-            <div class="slider-back"></div>
-            <div class="slider-img"></div>
-            <div class="slider-forward"></div>
+    <main class="slider">
+        <div class="slider-content block">
+            <div class="slider-button slider-back">
+                <img src="assets/chev.png" alt="Button Back">
+            </div>
+            <div class="slider-img">
+                <div class="slider-img-vertical">
+                    <img class="slider-img-vertical-phone" src="assets/phone.png" alt="Phone">
+                    <img class="slider-img-vertical-shadow" src="assets/phone-shadow.png" alt="Phone">
+                    <img class="slider-img-vertical-background" src="assets/background-vertical.png" alt="Phone">
+                </div>
+                <div class="slider-img-horizontal">
+                    <img class="slider-img-horizontal-phone" src="assets/phone.png" alt="Phone">
+                    <img class="slider-img-horizontal-shadow" src="assets/phone-shadow.png" alt="Phone">
+                    <img class="slider-img-horizontal-background" src="assets/background-horizontal.png" alt="Phone">
+                </div>
+            </div>
+            <div class="slider-button slider-forward">
+                <img src="assets/chev.png" alt="Button Forward">
+            </div>
         </div>
     </main>
     <div class="services">
