feat: add css rules for services block

--- a/singolo1.html
+++ b/singolo1.html
@@ -50,41 +50,63 @@
         </div>
     </main>
     <div class="services">
-        <h2>Our Services</h2>
-        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi
-            erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor
-            mauris condimentum nibh.</p>
-        <ul class="services-list">
-            <li>
-                <h2>Custom Design</h2>
-                <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices
-                    velit.</p>
-            </li>
-            <li>
-                <h2>Inovative Ideas</h2>
-                <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id
-                    lorem.</p>
-            </li>
-            <li>
-                <h2>Love Is The Answer</h2>
-                <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque
-                    condimentum.</p>
-            </li>
-            <li>
-                <h2>Responsive Layout</h2>
-                <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.
-                </p>
-            </li>
-            <li>
-                <h2>24 / 7 Support</h2>
-                <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas
-                    venenatis lorem .</p>
-            </li>
-            <li>
-                <h2>Feel Like A Star</h2>
-                <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
-            </li>
-        </ul>
+        <div class="services-content block">
+            <h2>Our Services</h2>
+            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi
+                erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor
+                mauris condimentum nibh.</p>
+            <ul class="services-list">
+                <li class="services-list-design">
+                    <div class="services-list-text">
+                        <h3>Custom Design</h3>
+                        <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut,
+                            ultrices
+                            velit.</p>
+                    </div>
+                </li>
+                <li class="services-list-idea">
+                    <div class="services-list-text">
+                        <h3>Inovative Ideas</h3>
+                        <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor
+                            id
+                            lorem.</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="services-list-text">
+                        <h3>Love Is The Answer</h3>
+                        <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.
+                            Quisque
+                            condimentum.</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="services-list-text">
+                        <h3>Responsive Layout</h3>
+                        <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent
+                            elit
+                            leo.
+                        </p>
+                    </div>
+                </li>
+                <li>
+                    <div class="services-list-text">
+                        <h3>24/7 Support</h3>
+                        <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque
+                            egestas
+                            venenatis lorem .</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="services-list-text">
+                        <h3>Feel Like A Star</h3>
+                        <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.
+                        </p>
+
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
 
