refactor: Layout corrected and style rules corrected in accordance with recommendations

--- a/singolo1.html
+++ b/singolo1.html
@@ -1,113 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Singolo</title>
-    <link rel="stylesheet" href="singolo1.css">
-    <link rel="stylesheet" href="assets\fonts\stylesheet.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Singolo</title>
+	<link rel="stylesheet" href="singolo1.css">
+	<link rel="stylesheet" href="assets/fonts/stylesheet.css">
 </head>
-
 <body>
-    <header class="head">
-        <div class="head-content block">
-            <div class="head-content-logo">
-                <h1>SINGOLO</h1>
-                <span>*</span>
-            </div>
-            <nav class="head-content-menu">
-                <ul>
-                    <li class="head-content-menu-selected">HOME</li>
-                    <li>SERVICES</li>
-                    <li>PORTFOLIO</li>
-                    <li>ABOUT</li>
-                    <li>CONTACT</li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <main class="slider">
-        <div class="slider-content block">
-            <div class="slider-button slider-back">
-                <img src="assets/chev.png" alt="Button Back">
-            </div>
-            <div class="slider-img">
-                <div class="slider-img-vertical">
-                    <img class="slider-img-vertical-phone" src="assets/phone.png" alt="Phone">
-                    <img class="slider-img-vertical-shadow" src="assets/phone-shadow.png" alt="Phone">
-                    <img class="slider-img-vertical-background" src="assets/background-vertical.png" alt="Phone">
-                </div>
-                <div class="slider-img-horizontal">
-                    <img class="slider-img-horizontal-phone" src="assets/phone.png" alt="Phone">
-                    <img class="slider-img-horizontal-shadow" src="assets/phone-shadow.png" alt="Phone">
-                    <img class="slider-img-horizontal-background" src="assets/background-horizontal.png" alt="Phone">
-                </div>
-            </div>
-            <div class="slider-button slider-forward">
-                <img src="assets/chev.png" alt="Button Forward">
-            </div>
-        </div>
-    </main>
-    <div class="services">
-        <div class="services-content block">
-            <h2>Our Services</h2>
-            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi
-                erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor
-                mauris condimentum nibh.</p>
-            <ul class="services-list">
-                <li class="services-list-design">
-                    <div class="services-list-text">
-                        <h3>Custom Design</h3>
-                        <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut,
-                            ultrices
-                            velit.</p>
-                    </div>
-                </li>
-                <li class="services-list-idea">
-                    <div class="services-list-text">
-                        <h3>Inovative Ideas</h3>
-                        <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor
-                            id
-                            lorem.</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="services-list-text">
-                        <h3>Love Is The Answer</h3>
-                        <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.
-                            Quisque
-                            condimentum.</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="services-list-text">
-                        <h3>Responsive Layout</h3>
-                        <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent
-                            elit
-                            leo.
-                        </p>
-                    </div>
-                </li>
-                <li>
-                    <div class="services-list-text">
-                        <h3>24/7 Support</h3>
-                        <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque
-                            egestas
-                            venenatis lorem .</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="services-list-text">
-                        <h3>Feel Like A Star</h3>
-                        <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.
-                        </p>
-
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </div>
+	<header class="head">
+		<div class="head-content block">
+			<div class="head-content-logo">
+				<h1>SINGOLO</h1>
+				<span>*</span>
+			</div>
+			<nav class="head-content-menu">
+				<ul>
+					<li class="head-content-menu-selected">HOME</li>
+					<li>SERVICES</li>
+					<li>PORTFOLIO</li>
+					<li>ABOUT</li>
+					<li>CONTACT</li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+	<main class="slider">
+		<div class="slider-content block">
+			<div class="slider-button slider-back">
+				<img src="assets/chev.png" alt="Button Back">
+			</div>
+			<div class="slider-img">
+				<div class="slider-img-vertical">
+					<img class="slider-img-vertical-phone" src="assets/phone.png" alt="Phone">
+					<img class="slider-img-vertical-shadow" src="assets/phone-shadow.png" alt="Phone">
+					<img class="slider-img-vertical-background" src="assets/background-vertical.png" alt="Phone">
+				</div>
+				<div class="slider-img-horizontal">
+					<img class="slider-img-horizontal-phone" src="assets/phone.png" alt="Phone">
+					<img class="slider-img-horizontal-shadow" src="assets/phone-shadow.png" alt="Phone">
+					<img class="slider-img-horizontal-background" src="assets/background-horizontal.png" alt="Phone">
+				</div>
+			</div>
+			<div class="slider-button slider-forward">
+				<img src="assets/chev.png" alt="Button Forward">
+			</div>
+		</div>
+	</main>
+	<div class="services">
+		<div class="services-content block">
+			<h2>Our Services</h2>
+			<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi
+				erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor
+				mauris condimentum nibh.</p>
+			<ul class="services-list">
+				<li class="services-list-design">
+					<div class="services-list-text">
+						<h3>Custom Design</h3>
+						<p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut,
+							ultrices
+							velit.</p>
+					</div>
+				</li>
+				<li class="services-list-idea">
+					<div class="services-list-text">
+						<h3>Inovative Ideas</h3>
+						<p>Quisque luctus, quam eget molestie com- modo, lacus purus cursus purus, nec rutrum tellus dolor
+							id
+							lorem.</p>
+					</div>
+				</li>
+				<li>
+					<div class="services-list-text">
+						<h3>Love Is The Answer</h3>
+						<p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque
+							condimentum.</p>
+					</div>
+				</li>
+				<li>
+					<div class="services-list-text">
+						<h3>Responsive Layout</h3>
+						<p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae- sentelit leo.
+						</p>
+					</div>
+				</li>
+				<li>
+					<div class="services-list-text">
+						<h3>24 / 7 Support</h3>
+						<p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellen- tesque egestas
+							venenatis lorem .</p>
+					</div>
+				</li>
+				<li>
+					<div class="services-list-text">
+						<h3>Feel Like A Star</h3>
+						<p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.
+						</p>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
 </body>
-
 </html>
