feat: add block about us

--- a/singolo2.html
+++ b/singolo2.html
@@ -127,5 +127,64 @@
 			</div>
 		</section>
 	</div>
+	<div class="about-us-wrapper">
+		<section class="about-us block">
+			<h2>About Us</h2>
+			<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+			<div class="about-us-peoples">
+				<div class="about-us-people">
+					<div class="about-us-people__photo">
+						<img src="assets/peoples/01.png" alt="people">
+					</div>
+					<div class="about-us-people__name">
+						<p>Adam Jensen</p>
+					</div>
+					<div class="about-us-people__note">
+						<p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+					</div>
+					<div class="about-us-people__social">
+						<img src="assets/social/facebook.png" alt="social">
+						<img src="assets/social/google+.png" alt="social">
+						<img src="assets/social/twitter.png" alt="social">
+						<img src="assets/social/linkedin.png" alt="social">
+					</div>
+				</div>
+				<div class="about-us-people">
+					<div class="about-us-people__photo">
+						<img src="assets/peoples/02.png" alt="people">
+					</div>
+					<div class="about-us-people__name">
+						<p>Desmond Miles</p>
+					</div>
+					<div class="about-us-people__note">
+						<p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+					</div>
+					<div class="about-us-people__social">
+						<img src="assets/social/facebook.png" alt="social">
+						<img src="assets/social/google+.png" alt="social">
+						<img src="assets/social/twitter.png" alt="social">
+						<img src="assets/social/linkedin.png" alt="social">
+					</div>
+				</div>
+				<div class="about-us-people">
+					<div class="about-us-people__photo">
+						<img src="assets/peoples/03.png" alt="people">
+					</div>
+					<div class="about-us-people__name">
+						<p>Scolara Visari</p>
+					</div>
+					<div class="about-us-people__note">
+						<p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+					</div>
+					<div class="about-us-people__social">
+						<img src="assets/social/facebook.png" alt="social">
+						<img src="assets/social/google+.png" alt="social">
+						<img src="assets/social/twitter.png" alt="social">
+						<img src="assets/social/linkedin.png" alt="social">
+					</div>
+				</div>
+			</div>
+		</section>
+	</div>
 </body>
 </html>
