feat: add about us block

--- a/singolo2.html
+++ b/singolo2.html
@@ -143,10 +143,10 @@
 						<p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
 					</div>
 					<div class="about-us-people__social">
-						<img src="assets/social/facebook.png" alt="social">
-						<img src="assets/social/google+.png" alt="social">
-						<img src="assets/social/twitter.png" alt="social">
-						<img src="assets/social/linkedin.png" alt="social">
+						<span></span>
+						<span></span>
+						<span></span>
+						<span></span>
 					</div>
 				</div>
 				<div class="about-us-people">
@@ -160,10 +160,10 @@
 						<p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
 					</div>
 					<div class="about-us-people__social">
-						<img src="assets/social/facebook.png" alt="social">
-						<img src="assets/social/google+.png" alt="social">
-						<img src="assets/social/twitter.png" alt="social">
-						<img src="assets/social/linkedin.png" alt="social">
+						<span></span>
+						<span></span>
+						<span></span>
+						<span></span>
 					</div>
 				</div>
 				<div class="about-us-people">
@@ -177,10 +177,10 @@
 						<p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
 					</div>
 					<div class="about-us-people__social">
-						<img src="assets/social/facebook.png" alt="social">
-						<img src="assets/social/google+.png" alt="social">
-						<img src="assets/social/twitter.png" alt="social">
-						<img src="assets/social/linkedin.png" alt="social">
+						<span></span>
+						<span></span>
+						<span></span>
+						<span></span>
 					</div>
 				</div>
 			</div>
