--- a/singolo3.html
+++ b/singolo3.html
@@ -142,7 +142,7 @@
 					<div class="about-us-people__note">
 						<p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
 					</div>
-					<div class="about-us-people__social">
+					<div class="social">
 						<span></span>
 						<span></span>
 						<span></span>
@@ -159,7 +159,7 @@
 					<div class="about-us-people__note">
 						<p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
 					</div>
-					<div class="about-us-people__social">
+					<div class="social">
 						<span></span>
 						<span></span>
 						<span></span>
@@ -176,7 +176,7 @@
 					<div class="about-us-people__note">
 						<p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
 					</div>
-					<div class="about-us-people__social">
+					<div class="social">
 						<span></span>
 						<span></span>
 						<span></span>
@@ -209,5 +209,16 @@
 			</div>
 		</section>
 	</div>
+	<footer class="footer-wrapper">
+		<div class="footer block">
+			<div class="copyright">© Copyright 2013 · by PSDchat.com</div>
+			<div class="social">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
