--- a/singolo3.html
+++ b/singolo3.html
@@ -192,18 +192,19 @@
 			<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 			<div class="layout-2-columns">
 				<form class="form-inputs" method="POST"><br>
-					<input type="text" placeholder="Name (Required)"><br>
-					<input type="text" placeholder="Email (Required)"><br>
+					<input type="text" placeholder="Name (Required)" required><br>
+					<input type="email" placeholder="Email (Required)" required><br>
 					<input type="text" placeholder="Subject"><br>
 					<textarea cols="30" rows="12" placeholder="Describe your project in detail..."></textarea>
+					<button type="submit">Submit</button>
 				</form>
 				<section class="contact">
 					<h3>Contact Information</h3>
 					<p>Quisque hendrerit purus dapibus, ornare nibh vitae, viver&shy;ra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.</p>
 					<div class="contacts">
 						<div class="contact__address contact-icons">Elm St. 14/05 Lost City</div>
-						<div class="contact__phone contact-icons">03528 331 86 35</div>
-						<div class="contact__mail contact-icons">info@singolo.com</div>
+						<div class="contact__phone contact-icons"><a href="tel:+035283318635">03528 331 86 35</a></div>
+						<div class="contact__mail contact-icons"><a href="mailto:info@singolo.com">info@singolo.com</a></div>
 					</div>
 				</section>
 			</div>
