fix: change color on authors, and changed assets folder

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 			</div>
 			<div class="slider-img">
 				<div class="slider-img-vertical">
-					<img class="slider-img-vertical-phone" src="assets/phone.png" alt="Phone">
-					<img class="slider-img-vertical-shadow" src="assets/phone-shadow.png" alt="Phone">
-					<img class="slider-img-vertical-background" src="assets/background-vertical.png" alt="Phone">
+					<img class="slider-img-vertical-phone" src="assets/phone/phone.png" alt="Phone">
+					<img class="slider-img-vertical-shadow" src="assets/phone/phone-shadow.png" alt="Phone">
+					<img class="slider-img-vertical-background" src="assets/phone/background-vertical.png" alt="Phone">
 				</div>
 				<div class="slider-img-horizontal">
-					<img class="slider-img-horizontal-phone" src="assets/phone.png" alt="Phone">
-					<img class="slider-img-horizontal-shadow" src="assets/phone-shadow.png" alt="Phone">
-					<img class="slider-img-horizontal-background" src="assets/background-horizontal.png" alt="Phone">
+					<img class="slider-img-horizontal-phone" src="assets/phone/phone.png" alt="Phone">
+					<img class="slider-img-horizontal-shadow" src="assets/phone/phone-shadow.png" alt="Phone">
+					<img class="slider-img-horizontal-background" src="assets/phone/background-horizontal.png" alt="Phone">
 				</div>
 			</div>
 			<div class="slider-button slider-forward">
