--- a/index.html
+++ b/index.html
@@ -226,13 +226,13 @@
 	</footer>
 	<div class="modal modal_closed">
 		<div class="modal-window">
-			<p class="modal-hide">X</p>
 			<p class="message-head">Письмо отправлено</p>
 			<div class="modal-message">
 				<p>fgdf</p>
 				<p>fgdf</p>
 				<p>fgdf</p>
 			</div>
+			<p class="modal-hide">OK</p>
 		</div>
 	</div>
 	<script src="script.js"></script>
