fix: исправлен переход по кнопкам меню

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 			</nav>
 		</div>
 	</header>
-	<div class="slider" id="home">
+	<div id="home"></div>
+	<div class="slider">
 		<div class="slider-content block">
 			<div class="slider-button slider-back">
 				<img src="assets/chev.png" alt="Button Back">
@@ -50,7 +51,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="services" id="services">
+	<div id="services"></div>
+	<div class="services">
 		<div class="services-content block">
 			<h2>Our Services</h2>
 			<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi
@@ -104,7 +106,8 @@
 			</ul>
 		</div>
 	</div>
-	<div class="portfolio-wrapper" id="portfolio">
+	<div id="portfolio"></div>
+	<div class="portfolio-wrapper">
 		<section class="portfolio block">
 			<h2>Portfolio</h2>
 			<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
@@ -130,7 +133,8 @@
 			</div>
 		</section>
 	</div>
-	<div class="about-us-wrapper" id="about-us">
+	<div id="about-us"></div>
+	<div class="about-us-wrapper">
 		<section class="about-us block">
 			<h2>About Us</h2>
 			<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
@@ -189,7 +193,8 @@
 			</div>
 		</section>
 	</div>
-	<div class="form-wrapper" id="contact">
+	<div id="contact"></div>
+	<div class="form-wrapper">
 		<section class="form block">
 			<h2>Get a Quote</h2>
 			<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
