feat: add responsive for screen in between 768px and 1020px

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="assets/fonts/stylesheet.css">
 </head>
+
 <body>
 	<header class="head">
 		<div class="head-content block">
@@ -40,7 +42,8 @@
 				<div class="slider-img-horizontal">
 					<img class="slider-img-horizontal-phone" src="assets/phone/phone.png" alt="Phone">
 					<img class="slider-img-horizontal-shadow" src="assets/phone/phone-shadow.png" alt="Phone">
-					<img class="slider-img-horizontal-background" src="assets/phone/background-horizontal.png" alt="Phone">
+					<img class="slider-img-horizontal-background" src="assets/phone/background-horizontal.png"
+						alt="Phone">
 				</div>
 			</div>
 			<div class="slider-img slider_second slider_hidden">
@@ -58,52 +61,60 @@
 			<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi
 				erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor
 				mauris condimentum nibh.</p>
-			<ul class="services-list">
-				<li class="services-list-design">
-					<div class="services-list-text">
-						<h3>Custom Design</h3>
-						<p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut,
-							ultrices
-							velit.</p>
-					</div>
-				</li>
-				<li class="services-list-idea">
-					<div class="services-list-text">
-						<h3>Inovative Ideas</h3>
-						<p>Quisque luctus, quam eget molestie com- modo, lacus purus cursus purus, nec rutrum tellus dolor
-							id
-							lorem.</p>
-					</div>
-				</li>
-				<li>
-					<div class="services-list-text">
-						<h3>Love Is The Answer</h3>
-						<p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque
-							condimentum.</p>
-					</div>
-				</li>
-				<li>
-					<div class="services-list-text">
-						<h3>Responsive Layout</h3>
-						<p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae- sentelit leo.
-						</p>
-					</div>
-				</li>
-				<li>
-					<div class="services-list-text">
-						<h3>24 /7 Support</h3>
-						<p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellen- tesque egestas
-							venenatis lorem .</p>
-					</div>
-				</li>
-				<li>
-					<div class="services-list-text">
-						<h3>Feel Like A Star</h3>
-						<p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.
-						</p>
-					</div>
-				</li>
-			</ul>
+			<div class="services-wrapper">
+				<ul class="services-list">
+					<li class="services-list-design">
+						<div class="services-list-text">
+							<h3>Custom Design</h3>
+							<p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus
+								ut,
+								ultrices
+								velit.</p>
+						</div>
+					</li>
+					<li class="services-list-idea">
+						<div class="services-list-text">
+							<h3>Inovative Ideas</h3>
+							<p>Quisque luctus, quam eget molestie com- modo, lacus purus cursus purus, nec rutrum tellus
+								dolor
+								id
+								lorem.</p>
+						</div>
+					</li>
+					<li>
+						<div class="services-list-text">
+							<h3>Love Is The Answer</h3>
+							<p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.
+								Quisque
+								condimentum.</p>
+						</div>
+					</li>
+					<li>
+						<div class="services-list-text">
+							<h3>Responsive Layout</h3>
+							<p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae-
+								sentelit leo.
+							</p>
+						</div>
+					</li>
+					<li>
+						<div class="services-list-text">
+							<h3>24 /7 Support</h3>
+							<p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellen-
+								tesque egestas
+								venenatis lorem .</p>
+						</div>
+					</li>
+					<li>
+						<div class="services-list-text">
+							<h3>Feel Like A Star</h3>
+							<p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam
+								tellus.
+							</p>
+						</div>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<div id="portfolio"></div>
@@ -117,19 +128,21 @@
 				<li>Graphic Design</li>
 				<li>Artwork</li>
 			</ul>
-			<div class="portfolio-images">
-				<img src="assets/portfolio/01.png" alt="image">
-				<img src="assets/portfolio/02.png" alt="image">
-				<img src="assets/portfolio/03.png" alt="image">
-				<img src="assets/portfolio/04.png" alt="image">
-				<img src="assets/portfolio/05.png" alt="image">
-				<img src="assets/portfolio/06.png" alt="image">
-				<img src="assets/portfolio/07.png" alt="image">
-				<img src="assets/portfolio/08.png" alt="image">
-				<img src="assets/portfolio/09.png" alt="image">
-				<img src="assets/portfolio/10.png" alt="image">
-				<img src="assets/portfolio/11.png" alt="image">
-				<img src="assets/portfolio/12.png" alt="image">
+			<div class="gallery-wrapper">
+				<div class="portfolio-images">
+					<img src="assets/portfolio/01.png" alt="image">
+					<img src="assets/portfolio/02.png" alt="image">
+					<img src="assets/portfolio/03.png" alt="image">
+					<img src="assets/portfolio/04.png" alt="image">
+					<img src="assets/portfolio/05.png" alt="image">
+					<img src="assets/portfolio/06.png" alt="image">
+					<img src="assets/portfolio/07.png" alt="image">
+					<img src="assets/portfolio/08.png" alt="image">
+					<img src="assets/portfolio/09.png" alt="image">
+					<img src="assets/portfolio/10.png" alt="image">
+					<img src="assets/portfolio/11.png" alt="image">
+					<img src="assets/portfolio/12.png" alt="image">
+				</div>
 			</div>
 		</section>
 	</div>
@@ -137,7 +150,9 @@
 	<div class="about-us-wrapper">
 		<section class="about-us block">
 			<h2>About Us</h2>
-			<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+			<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi
+				erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor
+				mauris condimentum nibh.</p>
 			<div class="about-us-peoples">
 				<div class="about-us-people">
 					<div class="about-us-people__photo">
@@ -147,7 +162,8 @@
 						<p>Adam Jensen</p>
 					</div>
 					<div class="about-us-people__note">
-						<p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+						<p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor
+							id lorem.</p>
 					</div>
 					<div class="social">
 						<span></span>
@@ -164,7 +180,8 @@
 						<p>Desmond Miles</p>
 					</div>
 					<div class="about-us-people__note">
-						<p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+						<p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut,
+							ultrices velit.</p>
 					</div>
 					<div class="social">
 						<span></span>
@@ -181,7 +198,8 @@
 						<p>Scolara Visari</p>
 					</div>
 					<div class="about-us-people__note">
-						<p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+						<p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.
+							Quisque condimentum.</p>
 					</div>
 					<div class="social">
 						<span></span>
@@ -197,22 +215,28 @@
 	<div class="form-wrapper">
 		<section class="form block">
 			<h2>Get a Quote</h2>
-			<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+			<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi
+				erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor
+				mauris condimentum nibh.</p>
 			<div class="layout-2-columns">
 				<form class="form-inputs" method="POST"><br>
 					<input type="text" name="form-name" placeholder="Name (Required)" required><br>
 					<input type="email" name="form-email" placeholder="Email (Required)" required><br>
 					<input type="text" name="form-subject" placeholder="Subject"><br>
-					<textarea cols="30" rows="12" name="form-message" placeholder="Describe your project in detail..."></textarea>
+					<textarea cols="30" rows="12" name="form-message"
+						placeholder="Describe your project in detail..."></textarea>
 					<button type="submit">Submit</button>
 				</form>
 				<section class="contact">
 					<h3>Contact Information</h3>
-					<p>Quisque hendrerit purus dapibus, ornare nibh vitae, viver&shy;ra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.</p>
+					<p>Quisque hendrerit purus dapibus, ornare nibh vitae, viver&shy;ra nibh. Fusce vitae aliquam
+						tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at
+						aliquet turpis, et consequat felis.</p>
 					<div class="contacts">
 						<div class="contact__address contact-icons">Elm St. 14/05 Lost City</div>
 						<div class="contact__phone contact-icons"><a href="tel:+035283318635">03528 331 86 35</a></div>
-						<div class="contact__mail contact-icons"><a href="mailto:info@singolo.com">info@singolo.com</a></div>
+						<div class="contact__mail contact-icons"><a href="mailto:info@singolo.com">info@singolo.com</a>
+						</div>
 					</div>
 				</section>
 			</div>
@@ -241,4 +265,5 @@
 	</div>
 	<script src="script.js"></script>
 </body>
+
 </html>
